--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "ts-node-dev --transpile-only --ignore-watch node_modules src/server.ts"
+    "dev": "ts-node-dev --transpile-only --ignore-watch node_modules src/server.ts",
+    "start": "ts-node-dev src/server.ts",
+    "typeorm": "ts-node-dev ./node_modules/typeorm/cli.js"
   },
   "keywords": [],
   "author": "",
@@ -13,11 +15,12 @@
   "dependencies": {
     "@types/express": "^4.17.11",
     "express": "^4.17.1",
+    "reflect-metadata": "^0.1.13",
     "sqlite3": "^5.0.2",
+    "typeorm": "^0.2.31",
     "uuidv4": "^6.2.6"
   },
   "devDependencies": {
-    "@types/knex": "^0.16.1",
     "@types/node": "^14.14.32",
     "@types/uuidv4": "^5.0.0",
     "ts-node-dev": "^1.1.6",
